Adjust implementation to changes of Java 22
Right now, we still cannot run Gradle itself with Java 22. Waiting for the 8.8rc1 release to test this.